--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,5 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["src", "vite.config.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src", "vite.config.ts"]
 }
