--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "d3": "^7.9.0",
+    "dompurify": "^3.3.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
