--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@types/d3": "^7.4.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "autoprefixer": "^10.4.22",
     "d3": "^7.9.0",
     "dompurify": "^3.3.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.554.0",
+    "postcss": "^8.5.6",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@dyad-sh/react-vite-component-tagger": "^0.8.0",
