--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/d3": "^7.4.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "crypto-js": "^4.2.0",
     "d3": "^7.9.0",
     "dompurify": "^3.3.0",
     "jszip": "^3.10.1",
