[dyad] إصلاح خطأ tsconfig.node.json المفقود - wrote 1 file(s)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,5 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["src", "vite-env.d.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src", "vite-env.d.ts"]
 }
