--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^19.2.3",
     "crypto-js": "^4.2.0",
     "d3": "^7.9.0",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.3.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.554.0",
